--- a/src/Products/Products.css
+++ b/src/Products/Products.css
@@ -1,27 +1,25 @@
 .grid {
   margin: auto;
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 40% 60%;
 }
 
 .grid1 {
   flex-grow: 1;
-  width: 100%;
-  padding-left: 25%;
-  padding-right: 25%;
   margin: auto;
-  position: relative;
 }
 .grid2 {
-  width: 50%;
   margin: auto;
 }
-img {
-  margin-left: 12%;
+.mainimg {
+  left: 0;
+  width: 90%;
+  text-align: center;
+  /* background-color: aqua; */
 }
 .prev,
 .next {
-  position: absolute;
+  position: fixed;
   top: 40%;
   border-radius: 0 3px 3px 0;
   font-weight: bold;
@@ -30,19 +28,24 @@ img {
 }
 .next {
   right: 0;
-  margin-right: 35%;
+  margin-right: 62%;
   border-radius: 3px 0 0 3px;
+}
+.prev {
+  left: 0;
 }
 .thumbnail {
   display: grid;
-  grid-template-columns: auto auto auto auto auto auto;
-  grid-column-gap: 100%;
-  float: left;
-  width: 10%;
+  grid-template-columns: 80px 80px 80px 80px 80px 80px;
+  grid-column-gap: 10px;
+}
+.thumbnail > div {
+  padding: 5px;
+  text-align: center;
 }
 .thumbimg {
-  /* width: 15%; */
   height: 80px;
+  width: 80px;
   opacity: 0.6;
 }
 .thumbimg:hover {
