--- a/src/items.css
+++ b/src/items.css
@@ -1,8 +1,24 @@
-.product1, .product2, .product3, .product4, .product5, .product6, .product7, .product8, .product9, .product10 {
-
+.product1,
+.product2,
+.product3,
+.product4,
+.product5,
+.product6,
+.product7,
+.product8,
+.product9,
+.product10 {
   display: inline-block;
-  box-sizing: border-box;
+  box-sizing: border-box; *
   width: 20%;
-  padding: 5px;
+  padding: 15px;
   text-align: center;
+}
+.products{}
+.title {
+  text-align: center;
+}
+.cart {
+  text-align: end;
+ 
 }
